--- a/MedicationTracker/MedicationTracker/Storyboard/Base.lproj/Main.storyboard
+++ b/MedicationTracker/MedicationTracker/Storyboard/Base.lproj/Main.storyboard
@@ -1,71 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NUq-LC-loC">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
-        <scene sceneID="koY-Dv-l13">
-            <objects>
-                <tableViewController id="8cH-tS-HGG" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="2oh-gl-WWH">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Mni-hK-sRN">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mni-hK-sRN" id="dRJ-D8-VYL">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="8cH-tS-HGG" id="VHO-vH-DTW"/>
-                            <outlet property="delegate" destination="8cH-tS-HGG" id="eOG-qF-hjI"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="2WU-6H-Zzn"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BqQ-fY-kJf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="284" y="161"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="uBd-4m-eN0">
-            <objects>
-                <viewController id="BE1-Q0-aUF" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="kMH-LO-3uX">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="AvI-7N-SRu"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9C4-JZ-kIb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1038" y="167"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="qKp-JE-1on">
             <objects>
                 <navigationController id="NUq-LC-loC" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qjS-52-U34">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="qjS-52-U34">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="8cH-tS-HGG" kind="relationship" relationship="rootViewController" id="vKa-3T-ste"/>
+                        <segue destination="9tD-iw-SyL" kind="relationship" relationship="rootViewController" id="TJJ-xA-In4"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="viz-9o-VN4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-635" y="161"/>
+        </scene>
+        <!--Medication Tracker-->
+        <scene sceneID="CeV-2C-yva">
+            <objects>
+                <collectionViewController id="9tD-iw-SyL" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="PJS-ML-lTa">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="A6i-ul-ZK6">
+                            <size key="itemSize" width="120" height="140"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="mAV-VQ-UQF">
+                                <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xqP-yZ-bfe">
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgV-2p-1wn">
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="120" id="PRg-Of-oGX"/>
+                                                <constraint firstAttribute="height" constant="140" id="qhZ-OC-wma"/>
+                                            </constraints>
+                                        </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eqj-Dg-C1m">
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Uhg-1c-rBm">
+                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDS-Mb-Z6I">
+                                                            <rect key="frame" x="39" y="0.0" width="42" height="22.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="idU-hH-pfp">
+                                                            <rect key="frame" x="0.0" y="22.5" width="120" height="97"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofU-ZD-CS7">
+                                                            <rect key="frame" x="39" y="119.5" width="42" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="Uhg-1c-rBm" secondAttribute="bottom" id="HOd-Pe-bTF"/>
+                                                <constraint firstAttribute="trailing" secondItem="Uhg-1c-rBm" secondAttribute="trailing" id="JJe-da-fj2"/>
+                                                <constraint firstItem="Uhg-1c-rBm" firstAttribute="top" secondItem="Eqj-Dg-C1m" secondAttribute="top" id="ZKz-i8-YtI"/>
+                                                <constraint firstItem="Uhg-1c-rBm" firstAttribute="leading" secondItem="Eqj-Dg-C1m" secondAttribute="leading" id="yBF-MG-0lL"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="cgV-2p-1wn" secondAttribute="bottom" id="Cfz-Lu-gqN"/>
+                                        <constraint firstItem="cgV-2p-1wn" firstAttribute="top" secondItem="xqP-yZ-bfe" secondAttribute="top" id="HiV-qd-O6a"/>
+                                        <constraint firstItem="Eqj-Dg-C1m" firstAttribute="leading" secondItem="cgV-2p-1wn" secondAttribute="leading" id="IN2-vL-FAh"/>
+                                        <constraint firstItem="Eqj-Dg-C1m" firstAttribute="trailing" secondItem="cgV-2p-1wn" secondAttribute="trailing" id="JQT-ea-B1w"/>
+                                        <constraint firstItem="Eqj-Dg-C1m" firstAttribute="top" secondItem="cgV-2p-1wn" secondAttribute="top" id="Lo8-sI-Tg2"/>
+                                        <constraint firstAttribute="trailing" secondItem="cgV-2p-1wn" secondAttribute="trailing" id="Otb-jb-Gsc"/>
+                                        <constraint firstItem="Eqj-Dg-C1m" firstAttribute="bottom" secondItem="cgV-2p-1wn" secondAttribute="bottom" id="Ux9-HM-cmy"/>
+                                        <constraint firstItem="cgV-2p-1wn" firstAttribute="leading" secondItem="xqP-yZ-bfe" secondAttribute="leading" id="y74-Hy-c0K"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="120" height="140"/>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="9tD-iw-SyL" id="PkF-Cr-rOH"/>
+                            <outlet property="delegate" destination="9tD-iw-SyL" id="NXM-pQ-fQk"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Medication Tracker" id="am8-2b-ku2"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bpd-oa-gNT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="144.92753623188406" y="158.70535714285714"/>
         </scene>
     </scenes>
 </document>
