--- a/MedicationTracker/MedicationTracker/Storyboard/Base.lproj/Main.storyboard
+++ b/MedicationTracker/MedicationTracker/Storyboard/Base.lproj/Main.storyboard
@@ -148,26 +148,21 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="310" translatesAutoresizingMaskIntoConstraints="NO" id="1Gf-5p-IK7">
-                                <rect key="frame" x="20" y="167" width="374" height="34"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zkx-Lt-VIA">
-                                        <rect key="frame" x="0.0" y="0.0" width="32" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oN8-UH-GDh">
-                                        <rect key="frame" x="342" y="0.0" width="32" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                </subviews>
-                            </stackView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OBT-sc-2pc">
+                                <rect key="frame" x="20" y="140" width="187" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GjO-cE-DbU">
+                                <rect key="frame" x="206" y="140" width="188" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="AZr-Dq-Tp8" firstAttribute="leading" secondItem="1Gf-5p-IK7" secondAttribute="leading" id="L6C-p0-oZ6"/>
-                            <constraint firstItem="AZr-Dq-Tp8" firstAttribute="top" secondItem="1Gf-5p-IK7" secondAttribute="bottom" constant="37" id="UkV-oj-WUd"/>
                             <constraint firstItem="AZr-Dq-Tp8" firstAttribute="leading" secondItem="bpF-7M-R75" secondAttribute="leading" constant="20" id="gE5-ch-ZFk"/>
                             <constraint firstItem="bpF-7M-R75" firstAttribute="bottom" secondItem="AZr-Dq-Tp8" secondAttribute="bottom" constant="23" id="ir2-UG-3Sr"/>
                             <constraint firstItem="bpF-7M-R75" firstAttribute="trailing" secondItem="AZr-Dq-Tp8" secondAttribute="trailing" constant="20" id="vqS-ej-b16"/>
@@ -175,8 +170,16 @@
                         <viewLayoutGuide key="safeArea" id="bpF-7M-R75"/>
                     </view>
                     <navigationItem key="navigationItem" id="Z2G-0R-kNk">
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="CvJ-k3-flV"/>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="CvJ-k3-flV">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="WWh-an-VAz" id="kVR-Uz-TdD"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="dateLabel" destination="GjO-cE-DbU" id="qaD-12-Y6r"/>
+                        <outlet property="medicationLabel" destination="OBT-sc-2pc" id="Vvy-3y-8oV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FCn-UI-WNz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
