--- a/MedicationTracker/MedicationTracker/Storyboard/Base.lproj/Main.storyboard
+++ b/MedicationTracker/MedicationTracker/Storyboard/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="PJS-ML-lTa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="A6i-ul-ZK6">
                             <size key="itemSize" width="120" height="140"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -39,7 +39,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MedicatonItemCell" id="mAV-VQ-UQF" customClass="MedicationItemCollectionViewCell" customModule="MedicationTracker" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MedicationItemCell" id="mAV-VQ-UQF" customClass="MedicationItemCollectionViewCell" customModule="MedicationTracker" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xqP-yZ-bfe">
@@ -118,8 +118,11 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="am8-2b-ku2">
-                        <barButtonItem key="leftBarButtonItem" title="Medication Tracker" id="tzu-SV-t1b"/>
+                        <barButtonItem key="leftBarButtonItem" title="Medicaton Tracker" id="tzu-SV-t1b">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus.rectangle.fill" catalog="system" id="qPC-nK-bWH">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <segue destination="WWh-an-VAz" kind="show" identifier="TrackMed" id="ocG-cB-Cow"/>
                             </connections>
@@ -139,32 +142,43 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="AZr-Dq-Tp8">
-                                <rect key="frame" x="20" y="238" width="374" height="601"/>
+                                <rect key="frame" x="20" y="285" width="374" height="564"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="601" id="bdS-HU-KVN"/>
+                                    <constraint firstAttribute="height" constant="564" id="bdS-HU-KVN"/>
                                 </constraints>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OBT-sc-2pc">
-                                <rect key="frame" x="20" y="140" width="187" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GjO-cE-DbU" userLabel="Label">
+                                <rect key="frame" x="20" y="227" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GjO-cE-DbU">
-                                <rect key="frame" x="206" y="140" width="188" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="olU-GY-cwa">
+                                <rect key="frame" x="20" y="174" width="374" height="32"/>
+                                <segments>
+                                    <segment title="Sun"/>
+                                    <segment title="Mon"/>
+                                    <segment title="Tue"/>
+                                    <segment title="Wed"/>
+                                    <segment title="Thur"/>
+                                    <segment title="Fri"/>
+                                    <segment title="Sat"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="olU-GY-cwa" firstAttribute="top" secondItem="bpF-7M-R75" secondAttribute="top" constant="34" id="Grl-15-58h"/>
+                            <constraint firstItem="GjO-cE-DbU" firstAttribute="leading" secondItem="AZr-Dq-Tp8" secondAttribute="leading" id="VAn-X6-gha"/>
+                            <constraint firstItem="GjO-cE-DbU" firstAttribute="trailing" secondItem="AZr-Dq-Tp8" secondAttribute="trailing" id="Wrn-an-IeN"/>
                             <constraint firstItem="AZr-Dq-Tp8" firstAttribute="leading" secondItem="bpF-7M-R75" secondAttribute="leading" constant="20" id="gE5-ch-ZFk"/>
-                            <constraint firstItem="bpF-7M-R75" firstAttribute="bottom" secondItem="AZr-Dq-Tp8" secondAttribute="bottom" constant="23" id="ir2-UG-3Sr"/>
+                            <constraint firstItem="bpF-7M-R75" firstAttribute="bottom" secondItem="AZr-Dq-Tp8" secondAttribute="bottom" constant="13" id="ir2-UG-3Sr"/>
+                            <constraint firstItem="AZr-Dq-Tp8" firstAttribute="top" secondItem="GjO-cE-DbU" secondAttribute="bottom" constant="24" id="miS-mY-K2g"/>
+                            <constraint firstItem="olU-GY-cwa" firstAttribute="trailing" secondItem="GjO-cE-DbU" secondAttribute="trailing" id="sFe-MP-6Gz"/>
+                            <constraint firstItem="olU-GY-cwa" firstAttribute="leading" secondItem="GjO-cE-DbU" secondAttribute="leading" id="uTq-zX-7rs"/>
                             <constraint firstItem="bpF-7M-R75" firstAttribute="trailing" secondItem="AZr-Dq-Tp8" secondAttribute="trailing" constant="20" id="vqS-ej-b16"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bpF-7M-R75"/>
@@ -178,7 +192,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="dateLabel" destination="GjO-cE-DbU" id="qaD-12-Y6r"/>
-                        <outlet property="medicationLabel" destination="OBT-sc-2pc" id="Vvy-3y-8oV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FCn-UI-WNz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
